assets/mobirise/css/mbr-additional.css
/* ... */
.cid-s48OLK6784 nav.opened .hamburger span:nth-child(4) {
  top: 8px;
  width: 0;
  opacity: 0;
  right: 50%;
  transition: all .2s;
}
.cid-s48OLK6784 .navbar-dropdown {
  padding: .5rem 1rem;
  position: fixed;
}
.cid-s48OLK6784 a.nav-link {
  display: flex;
  align-items: center;
  justify-content: center;
}
.cid-s48OLK6784 .icons-menu {
  flex-wrap: nowrap;
  display: flex;
  justify-content: center;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.3rem;
  text-align: center;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .cid-s48OLK6784 .navbar {
    height: 77px;
  }
  .cid-s48OLK6784 .navbar.opened {
    height: auto;
  }
  .cid-s48OLK6784 .nav-item .nav-link:hover::before {
    width: 175%;
    max-width: calc(100% + 2rem);
    left: -1rem;
  }
}
.cid-s8S1mt7R3l {
  padding-top: 5rem;
  padding-bottom: 3rem;
  background-image: url("../../../assets/images/website-bcg3-6-2000x1500.jpeg");
  background-image: url("../../../assets/images/website-bcg3-6-2000x1500.webp");
  background-image: url("../../../assets/images/website-bcg3-6-2000x1500.avif");
}
.cid-s8S1mt7R3l .mbr-section-title {
  color: #000000;
}
.cid-te0hYJh8SI {
  padding-top: 2rem;
  padding-bottom: 1rem;
  background-color: #000000;
}
.cid-te0hYJh8SI .mbr-fallback-image.disabled {
  display: none;
}
.cid-te0hYJh8SI .mbr-fallback-image {
  display: block;
  background-size: cover;
  background-position: center center;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
}
.cid-te0hYJh8SI .video-wrapper iframe {
  width: 100%;
}
.cid-te0hYJh8SI .mbr-section-title,
.cid-te0hYJh8SI .mbr-description {
  text-align: center;
}
@media (min-width: 992px) {
  .cid-te0hYJh8SI .text-wrapper {
    padding: 2rem;
  }
}
.cid-te0hYJh8SI .mbr-section-title {
  text-align: left;
  color: #bbbbbb;
}
.cid-te0hYJh8SI .mbr-section-subtitle {
  color: #ffe885;
}
.cid-te0hYJh8SI .mbr-text {
  color: #bbbbbb;
}
.cid-sCLJHDBvpI {
  padding-top: 3rem;
  padding-bottom: 3rem;
  background-color: #000000;
}
.cid-sCLJHDBvpI .mbr-section-subtitle {
  color: #bbbbbb;
}
.cid-sCLJHDBvpI .mbr-text {
  color: #bbbbbb;
}
.cid-s8S15VZ8cO {
  padding-top: 2rem;
  padding-bottom: 1rem;
  background-color: #000000;
}
.cid-s8S15VZ8cO .video-wrapper iframe {
  width: 100%;
}
.cid-s8S15VZ8cO .mbr-section-title,
.cid-s8S15VZ8cO .mbr-description {
  text-align: center;
}
@media (min-width: 992px) {
  .cid-s8S15VZ8cO .text-wrapper {
    padding: 2rem;
  }
}
.cid-s8S15VZ8cO .mbr-section-title {
  color: #bbbbbb;
  text-align: left;
}
.cid-s8S15VZ8cO .mbr-section-subtitle {
  color: #ffe885;
}
.cid-s8S15VZ8cO .mbr-text {
  color: #bbbbbb;
}
.cid-s8S3zUxAam {
  padding-top: 2rem;
  padding-bottom: 2rem;
  background-color: #000000;
}
.cid-s8S3zUxAam .video-wrapper iframe {
  width: 100%;
}
.cid-s8S3zUxAam .mbr-section-title,
.cid-s8S3zUxAam .mbr-description {
  text-align: center;
}
@media (min-width: 992px) {
  .cid-s8S3zUxAam .text-wrapper {
    padding: 2rem;
  }
}
.cid-s8S3zUxAam .mbr-section-title {
  color: #bbbbbb;
  text-align: left;
}
.cid-s8S3zUxAam .mbr-section-subtitle {
  color: #ffe885;
}
.cid-s8S3zUxAam .mbr-text {
  color: #bbbbbb;
}
.cid-s8S744yC9y {
  padding-top: 2rem;
  padding-bottom: 2rem;
  background-color: #000000;
}
.cid-s8S744yC9y .video-wrapper iframe {
  width: 100%;
}
.cid-s8S744yC9y .mbr-section-title,
.cid-s8S744yC9y .mbr-description {
  text-align: center;
}
@media (min-width: 992px) {
  .cid-s8S744yC9y .text-wrapper {
    padding: 2rem;
  }
}
.cid-s8S744yC9y .mbr-section-title {
  color: #bbbbbb;
  text-align: left;
}
.cid-s8S744yC9y .mbr-section-subtitle {
  color: #ffe885;
}
.cid-s8S744yC9y .mbr-text {
  color: #bbbbbb;
}
.cid-s8S8cvaBcW {
  padding-top: 2rem;
  padding-bottom: 2rem;
  background-color: #000000;
}
.cid-s8S8cvaBcW .video-wrapper iframe {
  width: 100%;
}
.cid-s8S8cvaBcW .mbr-section-title,
.cid-s8S8cvaBcW .mbr-description {
  text-align: center;
}
@media (min-width: 992px) {
  .cid-s8S8cvaBcW .text-wrapper {
    padding: 2rem;
  }
}
.cid-s8S8cvaBcW .mbr-section-title {
  color: #bbbbbb;
  text-align: left;
}
.cid-s8S8cvaBcW .mbr-section-subtitle {
  color: #ffe885;
}
.cid-s8S8cvaBcW .mbr-text {
  color: #bbbbbb;
}
.cid-s8S9crhgYp {
  padding-top: 2rem;
  padding-bottom: 2rem;
  background-color: #000000;
}
.cid-s8S9crhgYp .video-wrapper iframe {
  width: 100%;
}
.cid-s8S9crhgYp .mbr-section-title,
.cid-s8S9crhgYp .mbr-description {
  text-align: center;
}
@media (min-width: 992px) {
  .cid-s8S9crhgYp .text-wrapper {
    padding: 2rem;
  }
}
.cid-s8S9crhgYp .mbr-section-title {
  color: #bbbbbb;
  text-align: left;
}
.cid-s8S9crhgYp .mbr-section-subtitle {
  color: #ffe885;
}
.cid-s8S9crhgYp .mbr-text {
  color: #bbbbbb;
}
.cid-s8Smpojoyf {
  padding-top: 5rem;
  padding-bottom: 3rem;
  background-image: url("../../../assets/images/img-6081-2000x2667.jpeg");
  background-image: url("../../../assets/images/img-6081-2000x2667.webp");
  background-image: url("../../../assets/images/img-6081-2000x2667.avif");
}
.cid-s8Smpojoyf .mbr-section-title {
  color: #000000;
}
.cid-s8SzbOrjh5 {
  padding-top: 3rem;
  padding-bottom: 2rem;
  background-color: #000000;
}
.cid-s8SzbOrjh5 .mbr-section-subtitle {
  color: #bbbbbb;
  text-align: center;
}
.cid-s8SzbOrjh5 .mbr-text {
  color: #bbbbbb;
  text-align: center;
}
.cid-s8SmzsA3VN {
  padding-top: 1rem;
  padding-bottom: 0rem;
  background-color: #000000;
}
.cid-s8SmzsA3VN .video-wrapper iframe {
  width: 100%;
}
.cid-s8SmzsA3VN .mbr-section-title,
.cid-s8SmzsA3VN .mbr-description {
  text-align: center;
}
@media (min-width: 992px) {
  .cid-s8SmzsA3VN .text-wrapper {
    padding: 2rem;
  }
}
.cid-s8SmzsA3VN .mbr-section-title {
  color: #bbbbbb;
  text-align: center;
}
.cid-s8SmzsA3VN .mbr-section-subtitle {
  color: #ffe885;
}
.cid-s8SmzsA3VN .mbr-text {
  color: #bbbbbb;
}
.cid-s8Son1IeqO {
  padding-top: 1rem;
  padding-bottom: 2rem;
  background-color: #000000;
}
.cid-s8Son1IeqO .video-wrapper iframe {
  width: 100%;
}
/* ... */

